solutions/azure-automation-state-configuration/bicep/modules/network.bicep
targetScope = 'resourceGroup'

/*** PARAMETERS ***/

@description('Azure Virtual Machines, and supporting services (Automation State Configuration) region. This defaults to the resource group\'s location for higher reliability.')
param location string = resourceGroup().location

@description('Log Analytic Workspace where the logs will be sent')
param logAnalyticsName string

/*** RESOURCES ***/

@description('This Log Analytics workspace stores logs from the regional automation account and the virtual network.')
resource la 'Microsoft.OperationalInsights/workspaces@2023-09-01' existing = {
  name: logAnalyticsName
}

// @description('Network security group to control traffic on the vnet')
// resource nsg 'Microsoft.Network/networkSecurityGroups@2024-05-01' = {
//   name: 'nsg'
//   location: location
//   properties: {
//     securityRules: [
//       {
//         name: 'DenyAllInBound'
//         properties: {
//           protocol: 'Tcp'
//           sourcePortRange: '*'
//           sourceAddressPrefix: '*'
//           destinationPortRange: '*'
//           destinationAddressPrefix: '*'
//           access: 'Deny'
//           priority: 1000
//           direction: 'Inbound'
//         }
//       }
//       {
//         name: 'HTTP'
//         properties: {
//           protocol: 'Tcp'
//           sourcePortRange: '*'
//           sourceAddressPrefix: '*'
//           destinationPortRange: '80'
//           destinationAddressPrefix: '*'
//           access: 'Allow'
//           priority: 100
//           direction: 'Inbound'
//         }
//       }
//       {
//         name: 'HTTPS'
//         properties: {
//           protocol: 'Tcp'
//           sourcePortRange: '*'
//           sourceAddressPrefix: '*'
//           destinationPortRange: '443'
//           destinationAddressPrefix: '*'
//           access: 'Allow'
//           priority: 101
//           direction: 'Inbound'
//         }
//       }
//       {
//         name: 'Allow-AzureBastion-443-Out'
//         properties: {
//           protocol: 'Tcp'
//           sourcePortRange: '*'
//           sourceAddressPrefix: 'VirtualNetwork'
//           destinationPortRange: '443'
//           destinationAddressPrefix: 'Internet'
//           access: 'Allow'
//           priority: 110
//           direction: 'Outbound'
//         }
//       }
//     ]
//   }
// }

// @description('Network Security Group log')
// resource nsg_diagnosticSettings 'Microsoft.Insights/diagnosticSettings@2021-05-01-preview' = {
//   scope: nsg
//   name: 'nsg-${logAnalyticsName}'
//   properties: {
//     workspaceId: la.id
//     logs: [
//       {
//         category: 'NetworkSecurityGroupEvent'
//         enabled: true
//       }
//       {
//         category: 'NetworkSecurityGroupRuleCounter'
//         enabled: true
//       }
//     ]
//   }
// }

@description('Virtual Network')
resource vnet 'Microsoft.Network/virtualNetworks@2024-05-01' = {
  name: 'vnet'
  location: location
  properties: {
    addressSpace: {
      addressPrefixes: [
        '10.0.0.0/16'
      ]
    }
    subnets: [
      {
        name: 'subnet'
        properties: {
          addressPrefix: '10.0.0.0/24'
          // networkSecurityGroup: {
          //  // id: nsg.id
          // }
        }
      }
    ]
  }
}

output subnetId string = vnet.properties.subnets[0].id
